# chart-chat

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  cli.py  main.py  plan_debug.py  pyproject.toml  requirements.txt
backend/app/: app.py  charts.py  config.py  data.py  database.py  llm.py  main.py  models.py  pubsub.py  resolvers.py  schema.graphql  schema.py  storage.py  vega_lite_docs.py
backend/app/api/: commands.py  resolvers.py  routes.py  schema.graphql
backend/app/llm/: __init__.py  common.py  context.py  execute.py  generate_project_name.py  graph.py  plan.py  prompts.py  replan.py  summarize_task.py  tools.py
backend/app/services/: chart_service.py  generation.py
backend/tests/: test_llm_tools.py  test_vega_lite_docs.py
frontend/: .env.example  codegen.ts  index.html  package-lock.json  package.json
frontend/src/: App.tsx  CLAUDE.md  apolloClient.ts  main.tsx  vite-env.d.ts
frontend/src/__generated__/: gql.ts  graphql.ts
frontend/src/components/ChartCard/: ChartCard.tsx
frontend/src/graphql/: ChartAdded.graphql  ChartDeleted.graphql  ChartUpdated.graphql  CreateProjectFromPrompt.graphql  DeleteChart.graphql  DeleteDataSource.graphql  GetChart.graphql  GetChartRevisions.graphql  GetProject.graphql  GetProjectCharts.graphql  GetProjectDataSources.graphql  GetProjectMessages.graphql  GetProjectSpend.graphql  MessageAdded.graphql  ProjectNameUpdated.graphql  RevertChart.graphql  SendMessage.graphql  StatusUpdate.graphql  StopGeneration.graphql  UpdateChart.graphql  mutations.ts  queries.ts  schema.graphql
litellm/: docker-compose.yml  litellm_config.yaml  run_llm.sh
(+19 files in other folders)
