[project]
name = "chart-chat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ariadne>=0.23.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "langchain>=1.2.10",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0.post1",
    "jsonpatch>=1.33",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
